# DocAI

./: .gitignore  README.md  Test Task - AI Engineer.docx.md  main.py  output.json  pyproject.toml
api/: app.py  schemas.py
documents/: doc_13.txt  doc_14.txt  doc_15.txt  doc_17.txt  doc_21.txt  doc_22.txt  doc_23.txt  doc_4.txt  doc_5.txt  doc_6.txt  doc_9.txt
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts
frontend/src/pages/: Chat.tsx  Pipeline.tsx  Results.tsx  Search.tsx
pipeline/: classifier.py  extractor.py  ingestion.py  qa.py  retrieval.py
